--- a/views/pc/index.html
+++ b/views/pc/index.html
@@ -1,11 +1,57 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/styles/style.css' />
+    <link rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.css' />
+    <link rel='stylesheet' href='/styles/cover.css' />
+    <link rel='stylesheet' href='/styles/global.css' />
 </head>
 <body>
-    <h1>{{title}}</h1>
-    <p>Welcome to {{title}}</p>
+    <header>
+        <div class="inner clearfix">
+            <div class="logo pull-left">
+                <a href="#">清闲客</a>
+            </div>
+            <div class="search pull-left">
+                <div class="box clearfix">
+                    <input type="text" placeholder="搜索闲置物品"/>
+                    <a class="search-btn" href="javascript:;">
+                        <img src="/images/icon-search.png" alt="搜索"/>
+                    </a>
+                </div>
+            </div>
+            <ul class="user pull-right clearfix">
+                <li>
+                    <a class="info" href="" title="发布">
+                        <img src="/images/icon-plus.png" alt="发布闲置物品"/>
+                    </a>
+                </li>
+                <li>
+                    <a class="info" href="" title="待审">
+                        <img src="/images/icon-law.png" alt="待审"/>
+                        <span class="badge">4</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="info" href="" title="通知">
+                        <img src="/images/icon-tones.png" alt="通知"/>
+                        <span class="badge">3</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="info" href="" title="闲邮">
+                        <img src="/images/icon-message.png" alt="闲游"/>
+                        <span class="badge">2</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="avatar" href="avatar" title="管理">
+                        <img src="/images/avatar.jpg" alt=""/>
+                        <span class="username">布谷</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </header>
+    <div class="m-cate-bar"></div>
 </body>
 </html>
