模板切换回ejs，增加header引入include

--- a/views/pc/login.ejs
+++ b/views/pc/login.ejs
@@ -9,6 +9,8 @@
         <img src="/images/login_with_douban_24.png" alt=""/>
     </a>
 
+    <div style="height:100px;"><%=name%></div>
+
     <script data-main="/scripts/page/login" src="/bower_components/requirejs/require.js"></script>
 </body>
 </html>
