--- a/views/pc/header.ejs
+++ b/views/pc/header.ejs
@@ -1,6 +1,6 @@
 <div class="inner clearfix">
     <div class="logo pull-left">
-        <a href="#">清闲客</a>
+        <a href="#">BIUBIUBIU</a>
     </div>
     <div class="search pull-left">
         <div class="box clearfix">
@@ -36,8 +36,8 @@
         </li>
         <li>
             <a class="avatar" href="avatar" title="管理">
-                <img src="/images/avatar.jpg" alt=""/>
-                <span class="username"><%=username%></span>
+                <img src="<%=user.avatar%>" alt=""/>
+                <span class="nick"><%=user.nick%></span>
             </a>
         </li>
     </ul>
