--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -1,3 +1,4 @@
+/* 样式重置 */
 *, ul, ol, li{
     padding:0;
     margin:0;
@@ -7,6 +8,7 @@ html{
 }
 body {
     font: 14px SourceHanSansCN-ExtraLight, "Lucida Grande", Helvetica, Arial, sans-serif;
+    background-color: transparent;
 }
 li{
     list-style:none;
@@ -15,7 +17,15 @@ a {
     color: #004d40;
     text-decoration:none !important;
 }
+.clearfix:after {
+    content: " "; /* Older browser do not support empty content */
+    visibility: hidden;
+    display: block;
+    height: 0;
+    clear: both;
+}
 
+/* 头部 */
 header{
     background-color: white;
     border-bottom: 1px solid #d3cdca;
