--- a/views/pc/home.ejs
+++ b/views/pc/home.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <%include ./head.ejs%>
-    <link rel='stylesheet' href='/styles/index.css' />
+    <link rel='stylesheet' href='/styles/home.css' />
 </head>
 <body>
     <header>
