定义ajax统一路由 登陆验证初步调通

--- a/views/pc/login.ejs
+++ b/views/pc/login.ejs
@@ -11,6 +11,10 @@
 
     <div style="height:100px;"><%=name%></div>
 
+    <input id="username" type="text"/>
+    <input id="password" type="text"/>
+    <button id="login">登陆</button>
+
     <script data-main="/scripts/page/login" src="/bower_components/requirejs/require.js"></script>
 </body>
 </html>
