--- a/views/pc/login.ejs
+++ b/views/pc/login.ejs
@@ -2,18 +2,32 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>登陆</title>
+    <%include ./head.ejs%>
+    <link rel="stylesheet" href="/styles/auth.css"/>
+    <title>登陆 | 清闲客</title>
 </head>
 <body>
-    <a href="https://www.douban.com/service/auth2/auth?client_id=0ce8ea407e9be02a26babec17bd3a07e&redirect_uri=https://www.example.com/back&response_type=token">
-        <img src="/images/login_with_douban_24.png" alt=""/>
-    </a>
-
-    <div style="height:100px;"><%=name%></div>
-
-    <input id="username" type="text"/>
-    <input id="password" type="text"/>
-    <button id="login">登陆</button>
+    <div class="g-center clearfix">
+        <section class="m-login">
+            <p class="title">登陆清闲客</p>
+            <!-- 本地登陆 -->
+            <div class="local">
+                <input id="username" class="f-mb-20" type="text" placeholder="邮箱"/>
+                <div class="f-pr">
+                    <input id="password" type="password" placeholder="密码"/>
+                    <a id="login" class="login" href="javascript:;" alt="登陆" title="登陆"></a>
+                </div>
+                <a class="forget" href="javascript:;">? 忘记密码</a>
+            </div>
+            <!-- 第三方登陆 -->
+            <div class="other f-mt-60">
+                <p class="or">或者</p>
+                <a class="f-db" href="https://www.douban.com/service/auth2/auth?client_id=0ce8ea407e9be02a26babec17bd3a07e&redirect_uri=https://www.example.com/back&response_type=token">
+                    <img src="/images/login_with_douban_32.png" height="28" alt="用豆瓣账号登陆"/>
+                </a>
+            </div>
+        </section>
+    </div>
 
     <script data-main="/scripts/page/login" src="/bower_components/requirejs/require.js"></script>
 </body>
